# nova

./: .dockerignore  .env.example  .gitignore  AI_ENHANCEMENTS.md  APPSTORE_INTERACTION_FLOW.md  BACKEND_SPLIT.md  CLAUDE.md  COMET_EXTRACTION.md  Dockerfile  Dockerfile.rootfs  FEATURES_IMPLEMENTATION.md  GRPC_ARCHITECTURE.md  LLM.md  MARKETPLACE_IMPLEMENTATION.md  Makefile  README.md  architecture-review.md  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum
examples/: .gitignore  Cargo.toml  README.md  build_runtime_fixtures.sh  cpu_intensive.go  cpu_intensive.py  cpu_intensive.rs  db_persistent.py  db_proxy.py  db_reuse.py  disk_test.go  disk_test.py  disk_test.rs  hello.go  hello.py  hello.rs  hello_bun.js  hello_deno.js  hello_node.js  hello_php.php  hello_ruby.rb  hello_wasm.rs  layer_volume_demo.py  network_test.go  network_test.py  network_test.rs  rsa_test.py  stateful_counter.py  stress_test_vms.sh  test_all_runtimes.sh  test_hello.sh  timeout_test.go  timeout_test.py  timeout_test.rs  vm_capacity_test.sh
examples/hello_dotnet/: Program.cs
examples/hello_java/: Main.java
examples/marketplace/hello-bundle/: README.md  manifest.yaml
orbit/: Cargo.toml
orbit/src/: client.rs  config.rs  error.rs  main.rs  output.rs
orbit/src/commands/: ai.rs  apikeys.rs  async_invocations.rs  backends.rs  capacity.rs  cluster.rs  code.rs  config_cmd.rs  cost.rs  diagnostics.rs  dlq.rs  docs.rs  events.rs  functions.rs  gateway.rs  health.rs  invoke.rs  layers.rs  logs.rs  metrics.rs  mod.rs  notifications.rs  prewarm.rs  rate_limit.rs  rbac.rs  runtimes.rs  (+12 more)
(+771 files in other folders)
